# continuity

./: .gitignore  AGENTS.md  README.md  beads-prompt.md  continuity-plan.md  implement-prompt.md  loop.sh  manifest  mvkousfbrike5sdmjli6l4fkusitdp0v  ndpckic2dllagr10skpbevtqrajsjuvb  pyproject.toml  rhsoarcvpraa2q7crqbfuaidllqeovf1  ssonkfbktkuiap7jfhfr72l1urbffjvu  vhbfohnfmikcolrsn2lckuhvr10jb1ge
.beads/: .gitignore  metadata.json
docs/: architecture.md  continuity-hermes-backend-plugin-plan.md  hermes-compatibility.md  plan-coverage.json  retrieval-backend-bootstrap.md
scripts/: bootstrap-dev.sh  install-hermes-plugin.sh
tests/: test_admission_model.py  test_admission_store.py  test_api.py  test_arbiter.py  test_arbiter_model.py  test_belief_revision.py  test_belief_revision_model.py  test_claim_derivation.py  test_claim_model.py  test_cli.py  test_codex_adapter.py  test_compiler.py  test_compiler_model.py  test_compiler_store.py  test_config.py  test_core_engine_fixtures.py  test_dialectic.py  test_disclosure_model.py  test_durability_model.py  test_epistemics_model.py  test_event_journal_model.py  test_event_journal_store.py  test_fixture_bundle.py  test_forgetting_model.py  test_forgetting_store.py  test_hermes_chat_adapter.py  test_hermes_compat.py  test_hermes_fixture_corpus.py  test_hermes_install_script.py  test_hermes_parity_fixtures.py  test_hermes_plugin.py  test_implement_prompt.py  test_loop.py  test_migration.py  test_ollama_embeddings.py  test_ontology.py  test_outcomes_model.py  test_outcomes_store.py  test_packaging_bootstrap.py  (+30 more)
(+62 files in other folders)
