[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuity"
version = "0.1.0"
description = "Local-first memory engine for Hermes continuity."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
]
reasoning-openai = [
    "openai",
]
retrieval-zvec = [
    "zvec>=0.2.1b0,<0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
